Use Java 11 toolchain for non-dev builds
Co-authored-by: Adam Schill Collberg <adam.schill.collberg@protonmail.com>